style-new.css
@font-face{
    font-family: 'Roboto';
    font-weight: 100;
    font-style: normal;
    font-stretch: normal;
    src: url('./Fonts/Roboto/Roboto-Thin.woff') format('WOFF');
}
@font-face{
    font-family: 'Roboto';
    font-weight: 400;
    font-style: normal;
    font-stretch: normal;
    src: url('./Fonts/Roboto/Roboto-Regular.woff') format('WOFF');
}
@font-face{
    font-family: 'Roboto';
    font-weight: 500;
    font-style: normal;
    font-stretch: normal;
    src: url('./Fonts/Roboto/Roboto-Regular.woff') format('WOFF');
}
@font-face{
    font-family: 'Roboto';
    font-weight: 700;
    font-style: normal;
    font-stretch: normal;
    src: url('./Fonts/Roboto/Roboto-Bold.woff') format('WOFF');
}
@font-face{
    font-family: 'Roboto';
    font-weight: 900;
    font-style: normal;
    font-stretch: normal;
    src: url('./Fonts/Roboto/Roboto-Bold.woff') format('WOFF');
}
html{
  font-size: 16px;
}
body {
  font-family: 'Roboto', Fallback, sans-serif;
  font-weight: 400;
  font-size: clamp(1rem, 4vw, 1.375rem);
  color: #9B9B9B;
  margin: 0;
}

h1{
  font-family: 'Roboto', Fallback, sans-serif;
  color: #4A4A4A;
  font-size: clamp(2.25rem, 4vw, 4rem);
  font-weight: 900;
}

h2{
  font-family: 'Roboto', Fallback, sans-serif;
  color: #4A4A4A;
  font-size: clamp(1.75rem, 4vw, 2.25rem);
  font-weight: 900;
  margin-block-start: 1.2em;
  margin-block-end: 0.8em;

}

h3{
  color: #4A4A4A;
  font-family: 'Roboto', Fallback, sans-serif;
  font-size: clamp(1.375rem, 4vw, 1.75rem);
  font-weight: 700;
  margin-block-end: 0em;
}

h4{
  color: #4A4A4A;
  font-family: 'Roboto', Fallback, sans-serif;
  font-size: clamp(1.175rem, 4vw, 1.5rem);
  font-weight: 500;
  margin-block-end: 0em;
}

.text-small{
  font-family: 'Roboto', Fallback, sans-serif;
  font-size: 1rem;
  font-weight: 400;
}

/* ul {
  padding: 0;
  list-style: none;
} */
/* p{
  max-width: 26em;
  margin: auto;
} */

/* a {
  color: inherit;
  text-transform: uppercase;
  font-weight: bold;

} */

.primary-button{
    font-size: 0.725em;
    font-weight: 500;
    background-color: #4A4A4A;
    color: white;
    text-decoration: none;
    padding: 1.125em 2.125em;
    border-radius: 2.875em;
    text-align: center;
    display: inline-block;
    transition: all .3s;
    margin: 2em;
    box-shadow: -14px 14px 32px 2px rgba(0,0,0,.12);
}
.secondary-button{
    display: inline-block;
    margin: 2em auto;
    font-weight: 500;
    background-color: white;
    color: #4A4A4A;
    text-decoration: none;
    transition: all .3s;
    /* padding: 1.125em 2.125em; */
    /* font-size: 0.725em; */
    /* border-radius: 2.875em; */
    /* border: 0.2em; */
    /* border-style: solid; */
    /* border-color: #4A4A4A; */

}
.secondary-button:hover{
  display: inline-block;
  padding: 0.725em 1.125em;
  border-radius: 2.575em;
  border: 0.2em;
  border-style: solid;
  border-color: #4A4A4A;
  transition: all .5s;
}

/* .secondary-button:after {
    content: ' \2192';
} */

.grid-container{
  max-width: 72rem;
   margin-left: auto;
   margin-right: auto;
   padding:  1em;
}

.content-group{
padding: 4em 0em;
}

.site-header{
  display: flex;
  justify-content:space-between;
  flex-wrap: wrap;
}
/* .site-header{
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
  align-items: center;
  margin: auto;
} */

.logo {
  color: #4A4A4A;
  font-family: 'Roboto', Fallback, sans-serif;
  font-size: 1.2em;
  font-weight: 900;
  justify-content: center;
  align-self: center;
  grid-column: span 2;
  text-decoration: none;
  }

.title-color{
color: #9B9B9B;
}

.nav {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
}

.nav ul {
  display: flex;
  flex-basis: content;
  margin: 0;
  list-style: none;

  /* text-align: center; */
  /* padding-inline-start: 40px; */
}

.nav li {
  display: flex;
  align-items: center;
  text-transform: uppercase;
  font-weight: bold;
  color: #9B9B9B;
  height: 3em;
  margin: 0.2em 2em 0.2em 0;
}

.nav li a {
  color: inherit;
  text-decoration: none;
  /* align-items: center; */
  font-size: 0.9375em;
  /* justify-content: center; */
  padding: 2em 0;
  transition: color 0.2s ease-in-out;
}

.nav li:hover {
  color: #4A4A4A;
  box-shadow: 0px 4px 0px 0px #9B9B9B;
}
.social-links{

}
.main{
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(240px, 3fr));
}
.hero {
  padding: 2em 2em;
  background: white;
  margin-left: calc(50% - 50vw);
  margin-right: calc(50% - 50vw);
  align-items: center;

}
.hero-post img {
  width: 100%;
}
.hero p {
  max-width: 26em;
  margin: auto;
  padding-bottom: 0.6em;
}

.block{
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
  margin: 0em;
  }

.block .entry{
display: grid;
grid-column: span 2;
max-width: 36em;
margin: auto;
}

.post img{
max-width: 100%;
max-height: 50vw;
display: block;
margin-left: auto;
margin-right: auto;
}

.post img + em{
  display: block;
  font-size: 1rem;
  text-align: center;
  font-weight: 400;
  font-style: italic;
  margin: 1rem;
}

.block .entry ul{
  list-style-type: circle;
}

.block .entry li{
  margin-bottom: 1.6rem;
}

.block .entry a {
  color:#4A4A4A;
  font-weight: normal;
  text-decoration:underline;
}

.block article{
padding: 1em 1em 1em 1em;
}

.block article p{
max-width: 26em;
}

.block figure{
    display: block;
    margin-block-start: 0em;
    margin-block-end: 0em;
    margin-inline-start: 0em;
    margin-inline-end: 0em;
    padding: 1.8em;

}

.block figure img {
  overflow: hidden;
  position: relative;
  border-radius: 1.2em;
  width:100%;
  box-shadow: -14px 14px 32px 2px rgba(0,0,0,.12);
  /* box-shadow: -4px 4px 8px 1px rgba(119,119,136,.25); */
}

.block a {
  margin: 1rem 0rem;
  color:#4A4A4A;
  font-weight: bold;
  text-decoration: underline;
}


.entry blockquote {
    font-weight:600;
    margin: 1.8em .8em;
    border-left: 2px solid #ABD0CE;
    padding: 0.1em 1em;
    color: $gray;
    font-size: 22px;
    font-style: italic;
  }

.post .block{
  margin-top: 0em;
}

  .post .date {
    margin-top: 2.2em;
    color:#9B9B9B;
    text-transform: uppercase;
  }

  .fluid-width-video-wrapper {
    margin-top: 1.6em;
    margin-bottom: 1.6em;
    position: relative;
  	padding-bottom: 56.25%; /* 16:9 */
  	height: 0;
  }
  .fluid-width-video-wrapper iframe {
  	position: absolute;
  	top: 0;
  	left: 0;
  	width: 100%;
  	height: 100%;
  }

.highlight {
  background-color: #F2F2F2;
  width: 100vw;
  left: 50%;
  right:50%;
  margin-left: calc(50% - 50vw);
  margin-right: calc(50% - 50vw);

  }

.grey {
    background-color: #F2F2F2;
    }

.panel > ul{
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
  grid-gap: 1em;
  list-style: none;
}

.panel ul img {

  max-height: 8em;
  overflow: hidden;
  border-top-left-radius: .5em;
  border-top-right-radius: .5em;
  position: relative;
  box-shadow:0px 0px;
}

.logos {
  max-width: 20em;
  padding: 0.6em;
}

.logos img{
  display: block;
  max-width: 9.2em;

}

.center{
  text-align: center;
  max-width: 44em;
  margin: auto;
}

.card {
  display: flex;
  flex-direction: column;
  align-content: start;
  max-width: 20em;

  padding: 0 1em 1em 1em;
  margin: 1em;
  background-color: #fff;
  border-radius: 1.2em;
  box-shadow: -14px 14px 32px 2px rgba(0,0,0,.12);
  /* box-shadow: -4px 4px 8px 1px rgba(119,119,136,.25); */
}

.card .read-more {
  margin-top: auto;
  text-decoration: none;
}
.card h3{
  margin-top: 0em;
}
.card h3 a{
  text-decoration: none;
  font-size: clamp(1.375rem, 4vw, 1.75rem);
}

.card:hover {
  box-shadow: -14px 14px 18px 2px rgba(0,0,0,.14);
  transform:scale(1.01);
  transition: transform 0.4s ease-out, opacity 0.4s ease;
}

.footer {
    color: #9B9B9B;
    font-weight: bold;
    text-decoration: none;
    background-color: #4A4A4A;
    padding-block-start:0.1em;
    margin-bottom: -1em;
    }

